2008-06-10  Sancho Lerena <slerena@artica.es>

    * pandoradb.sql: Updated tevent structure. Added criticity and 
    other important and new fields.

    * pandoradb_data.sql: Added "remote_config" token for setup.

    * setup.php: Added support for token remote_config.

    * config_process.php: Added support for token remote_config.

    * incident_detail.php: Solved small problems in attachment.

    * snmp_view.php: Solved small problems in pagination.

    * fgraph.php: Added support to generate graphs on any interval 
    in time, not only "last XX". Need to implement user interface
    controls to work with it.

2008-04-24  Sancho Lerena <slerena@artica.es>

    * operation/reporting/reporting_viewer.php,
    operation/reporting/graph_viewer.php
    include/functions_reporting_pdf.php: Render stacked custom graphs.

    * include/styles/pandora_red.css: Improved RED style :-)

    * include/styles/pandora.css: Added background.

    * include/languages/language_en.php: Added stacked token.

    * pandoradb.sql: Added field "stacked" to custom graphs.

    * images/backgrounds/background_red.gif: Added cool background ;)

    * reporting/fgraph.php: stacked custom graph support.

    * godmode/db/db_main.php: Uses new config tokens.

    * godmode/db/db_purge.php: Works also with "all" agents (like 1.1)

    * godmode/reporting/graph_builder.php: Able to define stacked or not.

	* pandoradb_data.sql: Added several template modules contributed by 
    Guguevi. 

	* operation/events/events_rss.php: Added RSS events page, contributed
	by guruevi.

	* manage_network_components_form.php, 
	manage_network_templates_form.php,
	modules/manage_network_components.php: Combos are classified by name.

2008-04-23  Sancho Lerena <slerena@artica.es>

	* include/functions_reporting_pdf.php: New functions for PDF reporting.

	* include/functions_reporting.php: Fixed alert & event reporting.

	* include/functions_db.php: Fixed function give_db_value. Also 